<resources>
    <string name="app_name">ShoppingList</string>
    <string name="new_list">Nowa Lista</string>
    <string name="my_list">Moje Listy</string>
    <string name="example">Lorem Ipsum</string>
    <string name="list_name">Nazwa Listy</string>
    <string name="product">Produkt</string>
    <string name="price_opt">Cena (opcjonalne)</string>
    <string name="price">Cena</string>
    <string name="add">Dodaj</string>
    <string name="save">Zapisz</string>
    <string name="saved">Zapisano</string>
    <string name="failed">Błąd</string>
    <string name="next">Dalej</string>
    <string name="quantity">Ilość</string>
    <string name="quantity_opt">Ilość (opcjonalnie)</string>
    <string name="send">Wyślij</string>
    <string name="deleted">Usunięto</string>
    <string name="delete">Usuń</string>
    <string name="bought">Kupiono</string>
    <string name="empty">Brak List</string>
</resources>
