<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_cell">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/details_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/details_list_send" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/details_list_send"
        style="@style/MyButtonStyle"
        android:layout_above="@+id/details_list_delete"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:text="@string/send" />

    <TextView
        android:id="@+id/details_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty"
        android:textSize="@dimen/text_size_big"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/details_list_delete"
        style="@style/MyButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:text="@string/delete" />
</RelativeLayout>